# dlt-init-openapi

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  usage.md
.github/workflows/: lint.yml  test.yml
dlt_init_openapi/: __init__.py  config.py  exceptions.py  typing.py
dlt_init_openapi/cli/: __init__.py  cli_endpoint_selection.py
dlt_init_openapi/detector/: base_detector.py
dlt_init_openapi/detector/default/: __init__.py  const.py  primary_key.py  utils.py  warnings.py
dlt_init_openapi/parser/: config.py  context.py  endpoints.py  info.py  models.py  openapi_parser.py  pagination.py  parameters.py  security.py  types.py
dlt_init_openapi/renderer/: base_renderer.py
dlt_init_openapi/renderer/default/: __init__.py
dlt_init_openapi/utils/: misc.py  update_rest_api.py
dlt_openapi/: __init__.py  config.py  exceptions.py  typing.py
dlt_openapi/cli/: __init__.py  cli_endpoint_selection.py
dlt_openapi/detector/: base_detector.py
dlt_openapi/detector/default/: __init__.py  const.py  primary_key.py  utils.py  warnings.py
dlt_openapi/parser/: config.py  const.py  context.py  credentials.py  endpoints.py  info.py  models.py  openapi_parser.py  pagination.py  parameters.py  security.py  types.py
dlt_openapi/parser/properties/: converter.py
dlt_openapi/renderer/: base_renderer.py
dlt_openapi/renderer/default/: __init__.py
dlt_openapi/utils/: misc.py  paths.py  update_rest_api.py
hackathon/: README.md  game_of_thrones.yaml  google_bigquery.yaml  meowfacts.yaml  star_treck.yaml  vimeo.yml  what_i_did.md
hackathon/chargebee-pipeline/: README.md  pipeline.py
hackathon/chargebee-pipeline/.dlt/: config.toml
hackathon/chargebee-pipeline/chargebee/: __init__.py
hackathon/chargebee-pipeline/rest_api/: README.md
hackathon/chicago-pipeline/: README.md  chicago_pipeline.duckdb  pipeline.py
hackathon/chicago-pipeline/.dlt/: config.toml
hackathon/chicago-pipeline/chicago/: __init__.py
hackathon/coinbase-pipeline/: README.md  coinbase_pipeline.duckdb  pipeline.py
hackathon/coinbase-pipeline/.dlt/: config.toml
hackathon/coinbase-pipeline/coinbase/: __init__.py
hackathon/fakerestapi-pipeline/: README.md  pipeline.py  requirements.txt
hackathon/fakerestapi-pipeline/.dlt/: config.toml
hackathon/fakerestapi-pipeline/fakeapi/: __init__.py
hackathon/fakerestapi-pipeline/fakerestapi/: __init__.py
hackathon/game-of-thrones-pipeline/: README.md  pipeline.py
hackathon/game-of-thrones-pipeline/.dlt/: config.toml
hackathon/game-of-thrones-pipeline/game_of_thrones/: __init__.py
hackathon/google_bigquery-pipeline/: README.md  pipeline.py
hackathon/google_bigquery-pipeline/.dlt/: config.toml
hackathon/google_bigquery-pipeline/google_bigquery/: __init__.py
hackathon/hacker_news-pipeline/: README.md  REPORT.md  hacker_news_pipeline.duckdb  pipeline.py
hackathon/hacker_news-pipeline/.dlt/: config.toml
hackathon/hacker_news-pipeline/hacker_news/: __init__.py
hackathon/marvel/: README.md  pipeline.py
hackathon/marvel/.dlt/: config.toml  secrets.toml
hackathon/marvel/marvel/: __init__-incorrect.py  __init__.py
hackathon/meowfacts-pipeline/: README.md  meowfacts_pipeline.duckdb  pipeline.py
hackathon/meowfacts-pipeline/.dlt/: config.toml
hackathon/meowfacts-pipeline/meowfacts/: __init__.py
hackathon/pokemon-pipeline/: README.md  pipeline.py  pokemon_pipeline.duckdb
hackathon/pokemon-pipeline/.dlt/: config.toml
hackathon/pokemon-pipeline/pokemon/: __init__.py
hackathon/pollenrapporten-pipeline/: README.md  pipeline.py
hackathon/pollenrapporten-pipeline/.dlt/: config.toml
hackathon/pollenrapporten-pipeline/pollenrapporten/: __init__.py
hackathon/star-trek-pipeline/: README.md  pipeline.py  star_trek_pipeline.duckdb
hackathon/star-trek-pipeline/.dlt/: config.toml
hackathon/star-trek-pipeline/star_trek/: __init__.py
hackathon/vimeo-pipeline/: README.md  pipeline.py
hackathon/vimeo-pipeline/.dlt/: config.toml  (+1 more)
openapi_python_client/: __init__.py  cli.py  cli_endpoint_selection.py  config.py  typing.py  utils.py
openapi_python_client/cli/: __init__.py  cli_endpoint_selection.py
openapi_python_client/detector/: base_detector.py
openapi_python_client/detectors/: __init__.py  base_detector.py
openapi_python_client/parser/: const.py  context.py  credentials.py  endpoints.py  info.py  models.py  openapi_parser.py  pagination.py  parameters.py  paths.py  prompts.py  responses.py  types.py
openapi_python_client/renderer/: base_renderer.py
openapi_python_client/templates/: api_helpers.py.jinja  dlt_config.toml.j2  endpoint_macros.py.jinja  endpoint_module.py.jinja  pyproject.toml.jinja  source.py.j2  source.py.jinja  utils.py.jinja
openapi_python_client/templates_old/: endpoint_module.py.jinja  pyproject.toml.jinja  source.py.jinja
openapi_python_client/utils/: misc.py  paths.py
ratp-pipeline/: README.md  pipeline.py  ratp_pipeline.duckdb
ratp-pipeline/.dlt/: config.toml
ratp-pipeline/ratp/: __init__.py
tests/: test___main__.py  test_config.py  test_utils.py
tests/cases/: __init__.py
tests/cli/: __init__.py
tests/detectors/: test_utils.py
tests/discovery/: __init__.py
tests/e2e/: __init__.py  test_all_specs.py  test_auth_cases.py  test_dotastats_cases.py  test_french_geo_data_cases.py  test_json_paths.py  test_licenselibrary_cases.py  test_museums_cases.py  test_naming.py  test_observer_cases.py  test_openartnft_cases.py  test_original_specs.py  test_paginator_cases.py  test_path_params.py  test_pokemon_cases.py  test_pokemon_pipeline.py  test_primary_key.py  test_quotesapi_cases.py  test_teamgpt_cases.py  test_transformer_cases.py  test_zoom_with_pagination.py  utils.py
tests/integration/: test_all_specs.py  test_error_specs.py  utils.py
tests/parser/: test_parser.py  test_paths.py
tests/renderer/: test_pokemon_cases_parser.py  test_rest_api_dict.py  utils.py
tests/utils/: test_paths.py
tests/warnings/: test_warnings.py
(+136 files in other folders)
