[tool.poetry]
name = "dlt-init-openapi"
version = "0.1.0a3"
description = "Generate dlt Python clients from OpenAPI"
homepage = "https://dlthub.com"
repository = "https://github.com/dlt-hub/dlt-init-openapi"
license = "MIT"
keywords=["OpenAPI", "Client", "Generator"]
authors = ["David Scharf <david@dlthub.com>"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows"
]
readme = "README.md"
packages = [
    {include = "dlt_init_openapi"},
]
include = ["CHANGELOG.md", "dlt_init_openapi/py.typed", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
dlt = {extras = ["duckdb"], version = "^0.4.11"}
jinja2 = "^3.0.0"
typer = "^0.12.3"
black = ">=23"
isort = "^5.0.5"
pydantic = "^1.6.1"
httpx = ">=0.15.4,<0.25.0"
autoflake = "^1.4 || ^2.0.0"
requests = "^2.30.0"
questionary = "^1.10.0"
openapi-schema-pydantic = "^1.2.4"
referencing = "^0.34.0"
inflector = "^3.1.1"
loguru = "^0.7.2"

[tool.poetry.scripts]
dlt-init-openapi = "dlt_init_openapi.cli:app"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.0.0"
pytest-mock = "^3.14.0"
mypy = "*"
pytest-cov = "*"
python-multipart = "*"
types-PyYAML = "^6.0.3"
types-certifi = "^2020.0.0"
types-python-dateutil = "^2.0.0"
types-requests = "^2.31.0.20240406"

[tool.black]
line-length = 120
target_version = ['py38', 'py39', 'py310', 'py311']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | env
    | \.mypy_cache
    | dlt_init_openapi/templates
    | tests/test_templates
    | end_to_end_tests/test_custom_templates
    | end_to_end_tests/golden-record-custom
  )/
)
'''

[tool.isort]
line_length = 120
profile = "black"
skip = [".venv", "tests/test_templates", "integration-tests", "env"]

[tool.coverage.run]
omit = ["dlt_init_openapi/templates/*"]

[tool.mypy]
plugins = ["pydantic.mypy"]
disallow_any_generics = true
disallow_untyped_defs = true
warn_redundant_casts = true
strict_equality = true
show_error_codes = true
implicit_optional = true
strict_optional = false

[[tool.mypy.overrides]]
module = [
    "importlib_metadata",
    "typer",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
junit_family = "xunit2"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
